--- a/fusion.html
+++ b/fusion.html
@@ -12,34 +12,7 @@
 
 </head>
 <body>
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="#">Chart Engines</a>
-      </div>
-      <div id="navbar" class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="extjschart.html" target="targetframe">Sencha Charts</a></li>
-          <li><a href="fusion.html" target="targetframe">FusionCharts</a></li>
-          <li><a href="#d3" target="targetframe">D3.js</a></li>
-        </ul>
-      </div><!--/.nav-collapse -->
-    </div>
-  </nav>
-
   <div class="container">
-
-    <div class="starter-template">
-      <h1>A brief study on popular JavaScript chart engines</h1>
-    </div>
-
     <div class="dropdown">
       <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select City
       <span class="caret"></span></button>
@@ -56,10 +29,12 @@
    </div>
 
   </div><!-- /.container -->
-
-  <div>
-    <iframe src="extjschart.html" name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" width="1500" height="800"></iframe>
-  </div>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="fusioncharts/js/fusioncharts.js"></script>
+  <script type="text/javascript" src="fusioncharts/js/fusioncharts-jquery-plugin.js"></script>
+  <script type="text/javascript" src="fusioncharts/js/themes/fusioncharts.theme.ocean.js"></script>
+  <script type="text/javascript" src="fusion.js"></script>
 </body>
 </html>
