--- a/extjschart.html
+++ b/extjschart.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=IE8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <title>Chart ExtJS</title>
 <!-- ExtJS -->
-  <script type="text/javascript" src="extjs/ext-all-debug.js"></script>
-  <script type="text/javascript" src="extjs/packages/charts/classic/charts-debug.js"></script>
-  <link rel="stylesheet" type="text/css" href="extjs/classic/theme-triton/resources/theme-triton-all-debug.css">
-  <link rel="stylesheet" type="text/css" href="extjs/packages/charts/classic/classic/resources/charts-all-debug.css">
-  <script type="text/javascript" src="extjschart/app.js"></script>
+  <script type="text/javascript" src="./extjs/ext-all-debug.js"></script>
+  <script type="text/javascript" src="./extjs/packages/charts/classic/charts-debug.js"></script>
+  <link rel="stylesheet" type="text/css" href="./extjs/classic/theme-triton/resources/theme-triton-all-debug.css">
+  <link rel="stylesheet" type="text/css" href="./extjs/packages/charts/classic/classic/resources/charts-all-debug.css">
+  <script type="text/javascript" src="./extjschart/app.js"></script>
 <script type="text/javascript">
   var Ext = Ext || {};
   Ext.application({
