--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </div><!-- /.container -->
 
   <div>
-    <iframe src="extjschart.html" name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" width="1500" height="800"></iframe>
+    <iframe src="" name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" width="1500" height="800"></iframe>
   </div>
 
 </body>
