multi series for pm2.5

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="#">Home</a></li>
           <li><a href="extjschart.html" target="targetframe">Sencha Charts</a></li>
-          <li><a href="fusion.html" target="targetframe">FusionCharts</a></li>
+          <li><a href="fusion/fusion.html" target="targetframe">FusionCharts</a></li>
           <li><a href="#d3" target="targetframe">D3.js</a></li>
         </ul>
       </div><!--/.nav-collapse -->
@@ -39,26 +39,10 @@
     <div class="starter-template">
       <h1>A brief study on popular JavaScript chart engines</h1>
     </div>
-
-    <div class="dropdown">
-      <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select City
-      <span class="caret"></span></button>
-      <ul class="dropdown-menu" id="city">
-        <li><a href="#">Beijing</a></li>
-        <li><a href="#">Chengdu</a></li>
-        <li><a href="#">Guangzhou</a></li>
-        <li><a href="#">Shanghai</a></li>
-        <li><a href="#">Shenyang</a></li>
-      </ul>
-    </div>
-    <div id="chart-container">
-    FusionCharts will render here
-   </div>
-
   </div><!-- /.container -->
 
   <div>
-    <iframe src="extjschart.html" name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" width="1500" height="800"></iframe>
+    <iframe src="" name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" width="1500" height="800"></iframe>
   </div>
 
 </body>
