modify data and remove intellij project files

--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
     <div class="starter-template">
       <h1>A brief study on popular JavaScript chart engines</h1>
     </div>
+
   </div><!-- /.container -->
 
-  <div>
-    <iframe src="" name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" width="1500" height="800"></iframe>
+  <div style="text-align: center;">
+    <iframe src="" name="targetframe" allowTransparency="true" scrolling="no" frameborder="0" width="1500" height="800" display="block"></iframe>
   </div>
-
+  
 </body>
 </html>
