--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <li class="active"><a href="#">Home</a></li>
           <li><a href="extjschart.html" target="targetframe">Sencha Charts</a></li>
           <li><a href="fusion/fusion.html" target="targetframe">FusionCharts</a></li>
-          <li><a href="#d3" target="targetframe">D3.js</a></li>
+          <li><a href="dygraphs/dygraphs.html" target="targetframe">dygraphs</a></li>
         </ul>
       </div><!--/.nav-collapse -->
     </div>
