--- a/dygraphs/dygraphs.html
+++ b/dygraphs/dygraphs.html
@@ -4,8 +4,19 @@
     <script type="text/javascript" src="dygraph-combined-dev.js"></script>
 </head>
 <body>
-    <div id="graphdiv" style="text-align: left; position: relative; width: 1100px; height: 600px;">
-    </div>
+    <table>
+        <tbody>
+            <tr>
+                <td>
+                    <div id="graphdiv" style="text-align: left; position: relative; width: 1100px; height: 600px;">   </div>
+                </td>
+                <td valign="top">
+                    <div id="legned" style="width:120px"></div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    
     <script type="text/javascript">
         var data = [
 						{"label":"1/1/2015 0:00","beijingValue":"22","shanghaiValue":"32","chengduValue":"152","guangzhouValue":"38","shenzhenValue":"37"},
@@ -7305,17 +7316,22 @@
 						{"label":"10/31/2015 22:00","beijingValue":"98","shanghaiValue":"31","chengduValue":"31","guangzhouValue":"16","shenzhenValue":"112"},
 						{"label":"10/31/2015 23:00","beijingValue":"104","shanghaiValue":"25","chengduValue":"37","guangzhouValue":"17","shenzhenValue":"115"}
 					];
-            var  g = new Dygraph(
+						var g = new Dygraph(
 									document.getElementById("graphdiv"),
 									function () {
-										var arr = [];
-										for (var item in data) {
-											arr.push([new Date(data[item].label), data[item].beijingValue, data[item].shanghaiValue, data[item].chengduValue, data[item].guangzhouValue, data[item].shenzhenValue]);
-										}
-										return arr;
+									    var arr = [];
+									    for (var item in data) {
+									        arr.push([new Date(data[item].label), data[item].beijingValue, data[item].shanghaiValue, data[item].chengduValue, data[item].guangzhouValue, data[item].shenzhenValue]);
+									    }
+									    return arr;
 									},
 									{
-										labels: ["label", "beijing", "shanghai", "chengdu", "guangzhou", "shenzhen"]
+									    labelsDiv: document.getElementById("legned"),
+										labelsSeparateLines: true,
+									    labels: ["label", "beijing", "shanghai", "chengdu", "guangzhou", "shenzhen"],
+									    title: 'pollution',
+									    legend: 'always',
+									    labelsDivStyles: { 'textAlign': 'right' }
 									}
 								);
     </script>
