add value range
add value range

--- a/dygraphs/dygraphs.html
+++ b/dygraphs/dygraphs.html
@@ -7331,7 +7331,8 @@
 									    labels: ["label", "beijing", "shanghai", "chengdu", "guangzhou", "shenzhen"],
 									    title: 'pollution',
 									    legend: 'always',
-									    labelsDivStyles: { 'textAlign': 'right' }
+									    labelsDivStyles: { 'textAlign': 'right' },
+										valueRange: [0, 1000]
 									}
 								);
     </script>
