add axis labels
add axis labels

--- a/dygraphs/dygraphs.html
+++ b/dygraphs/dygraphs.html
@@ -7329,10 +7329,12 @@
 									    labelsDiv: document.getElementById("legned"),
 										labelsSeparateLines: true,
 									    labels: ["label", "beijing", "shanghai", "chengdu", "guangzhou", "shenzhen"],
-									    title: 'pollution',
+									    title: 'Air Pollution Trend',
 									    legend: 'always',
 									    labelsDivStyles: { 'textAlign': 'right' },
-										valueRange: [0, 1000]
+										valueRange: [0, 1000],
+										xlabel: 'Date',
+										ylabel: 'PM 2.5'
 									}
 								);
     </script>
